[gd_scene load_steps=17 format=3 uid="uid://ceuje3bd1cqav"]

[ext_resource type="Theme" uid="uid://c5kdo4nq87ox5" path="res://themes/new_theme.tres" id="1_74p77"]
[ext_resource type="Script" path="res://scenes/toolbar_overlay.gd" id="2_6h8mm"]
[ext_resource type="Texture2D" uid="uid://ico1ojqjc20x" path="res://assets/graphics/buttons.png" id="4_3konl"]
[ext_resource type="Texture2D" uid="uid://t2eo71jbjc7u" path="res://assets/buildings.png" id="9_qejto"]

[sub_resource type="AtlasTexture" id="AtlasTexture_8uuls"]
atlas = ExtResource("9_qejto")
region = Rect2(0, 84, 12, 12)

[sub_resource type="AtlasTexture" id="AtlasTexture_3kabi"]
atlas = ExtResource("9_qejto")
region = Rect2(0, 96, 24, 12)

[sub_resource type="AtlasTexture" id="AtlasTexture_mvjxw"]
atlas = ExtResource("9_qejto")
region = Rect2(0, 108, 24, 12)

[sub_resource type="AtlasTexture" id="AtlasTexture_j6fop"]
atlas = ExtResource("9_qejto")
region = Rect2(0, 120, 12, 12)

[sub_resource type="AtlasTexture" id="AtlasTexture_53soq"]
atlas = ExtResource("9_qejto")
region = Rect2(0, 132, 12, 12)

[sub_resource type="AtlasTexture" id="AtlasTexture_sqbxh"]
atlas = ExtResource("4_3konl")
region = Rect2(56, 0, 8, 8)

[sub_resource type="AtlasTexture" id="AtlasTexture_gvquw"]
atlas = ExtResource("4_3konl")
region = Rect2(48, 0, 8, 8)

[sub_resource type="AtlasTexture" id="AtlasTexture_dtuyv"]
atlas = ExtResource("4_3konl")
region = Rect2(0, 0, 8, 8)

[sub_resource type="AtlasTexture" id="AtlasTexture_b8a2p"]
atlas = ExtResource("4_3konl")
region = Rect2(8, 0, 8, 8)

[sub_resource type="AtlasTexture" id="AtlasTexture_l3afb"]
atlas = ExtResource("4_3konl")
region = Rect2(16, 0, 8, 8)

[sub_resource type="AtlasTexture" id="AtlasTexture_gww20"]
atlas = ExtResource("4_3konl")
region = Rect2(32, 0, 8, 8)

[sub_resource type="AtlasTexture" id="AtlasTexture_pjrv0"]
atlas = ExtResource("4_3konl")
region = Rect2(24, 0, 8, 8)

[node name="ToolbarOverlay" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 1
theme = ExtResource("1_74p77")
script = ExtResource("2_6h8mm")

[node name="ButtonHelpText" type="RichTextLabel" parent="."]
layout_mode = 0
offset_top = 44.0
offset_right = 64.0
offset_bottom = 55.0
mouse_filter = 1
text = "Rotate"

[node name="CursorStuffs" type="Control" parent="."]
layout_mode = 2
anchors_preset = 0
offset_right = 25.0
offset_bottom = 18.0
mouse_filter = 1

[node name="BuildingOutlines" type="Control" parent="CursorStuffs"]
anchors_preset = 0
offset_left = -12.0
offset_top = -11.0
offset_right = 10.0
offset_bottom = 12.0
mouse_filter = 1

[node name="Building1" type="TextureRect" parent="CursorStuffs/BuildingOutlines"]
visible = false
layout_mode = 0
offset_left = 6.0
offset_top = 5.0
offset_right = 18.0
offset_bottom = 17.0
texture = SubResource("AtlasTexture_8uuls")

[node name="Building2" type="TextureRect" parent="CursorStuffs/BuildingOutlines"]
visible = false
layout_mode = 0
offset_left = 6.0
offset_top = 5.0
offset_right = 30.0
offset_bottom = 17.0
texture = SubResource("AtlasTexture_3kabi")

[node name="Building3" type="TextureRect" parent="CursorStuffs/BuildingOutlines"]
visible = false
layout_mode = 0
offset_left = 6.0
offset_top = 5.0
offset_right = 30.0
offset_bottom = 17.0
texture = SubResource("AtlasTexture_mvjxw")

[node name="BuildingBelt" type="TextureRect" parent="CursorStuffs/BuildingOutlines"]
visible = false
layout_mode = 0
offset_left = 6.0
offset_top = 5.0
offset_right = 18.0
offset_bottom = 17.0
texture = SubResource("AtlasTexture_j6fop")

[node name="BuildingDestroy" type="TextureRect" parent="CursorStuffs/BuildingOutlines"]
layout_mode = 0
offset_left = 6.0
offset_top = 5.0
offset_right = 18.0
offset_bottom = 17.0
texture = SubResource("AtlasTexture_53soq")

[node name="HBoxContainer" type="HBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 1.0
offset_top = -10.0
offset_right = 2.0
grow_horizontal = 2
grow_vertical = 0

[node name="ButtonNone" type="Button" parent="HBoxContainer"]
layout_mode = 2
toggle_mode = true
icon = SubResource("AtlasTexture_sqbxh")
metadata/building_type = "none"

[node name="ButtonBelt" type="Button" parent="HBoxContainer"]
layout_mode = 2
toggle_mode = true
icon = SubResource("AtlasTexture_gvquw")
metadata/building_type = "belt"

[node name="ButtonRotate" type="Button" parent="HBoxContainer"]
layout_mode = 2
toggle_mode = true
icon = SubResource("AtlasTexture_dtuyv")
metadata/building_type = "rotate"

[node name="ButtonSplitVertical" type="Button" parent="HBoxContainer"]
layout_mode = 2
toggle_mode = true
icon = SubResource("AtlasTexture_b8a2p")
metadata/building_type = "split_vertical"

[node name="ButtonSplitHorizontal" type="Button" parent="HBoxContainer"]
layout_mode = 2
toggle_mode = true
icon = SubResource("AtlasTexture_l3afb")
metadata/building_type = "split_horizontal"

[node name="ButtonMerge" type="Button" parent="HBoxContainer"]
layout_mode = 2
toggle_mode = true
icon = SubResource("AtlasTexture_gww20")
metadata/building_type = "merge"

[node name="ButtonDestroy" type="Button" parent="HBoxContainer"]
layout_mode = 2
toggle_mode = true
icon = SubResource("AtlasTexture_pjrv0")
metadata/building_type = "destroy"

[connection signal="gui_input" from="CursorStuffs/BuildingOutlines" to="." method="_on_building_outlines_gui_input"]
[connection signal="mouse_entered" from="HBoxContainer/ButtonNone" to="." method="_on_button_none_mouse_entered"]
[connection signal="mouse_exited" from="HBoxContainer/ButtonNone" to="." method="_on_button_common_mouse_exited"]
[connection signal="pressed" from="HBoxContainer/ButtonNone" to="." method="_on_button_none_pressed"]
[connection signal="mouse_entered" from="HBoxContainer/ButtonBelt" to="." method="_on_button_belt_mouse_entered"]
[connection signal="mouse_exited" from="HBoxContainer/ButtonBelt" to="." method="_on_button_common_mouse_exited"]
[connection signal="pressed" from="HBoxContainer/ButtonBelt" to="." method="_on_button_belt_pressed"]
[connection signal="mouse_entered" from="HBoxContainer/ButtonRotate" to="." method="_on_button_rotate_mouse_entered"]
[connection signal="mouse_exited" from="HBoxContainer/ButtonRotate" to="." method="_on_button_common_mouse_exited"]
[connection signal="pressed" from="HBoxContainer/ButtonRotate" to="." method="_on_button_rotate_pressed"]
[connection signal="mouse_entered" from="HBoxContainer/ButtonSplitVertical" to="." method="_on_button_split_vertical_mouse_entered"]
[connection signal="mouse_exited" from="HBoxContainer/ButtonSplitVertical" to="." method="_on_button_common_mouse_exited"]
[connection signal="pressed" from="HBoxContainer/ButtonSplitVertical" to="." method="_on_button_split_vertical_pressed"]
[connection signal="mouse_entered" from="HBoxContainer/ButtonSplitHorizontal" to="." method="_on_button_split_horizontal_mouse_entered"]
[connection signal="mouse_exited" from="HBoxContainer/ButtonSplitHorizontal" to="." method="_on_button_common_mouse_exited"]
[connection signal="pressed" from="HBoxContainer/ButtonSplitHorizontal" to="." method="_on_button_split_horizontal_pressed"]
[connection signal="mouse_entered" from="HBoxContainer/ButtonMerge" to="." method="_on_button_merge_mouse_entered"]
[connection signal="mouse_exited" from="HBoxContainer/ButtonMerge" to="." method="_on_button_common_mouse_exited"]
[connection signal="pressed" from="HBoxContainer/ButtonMerge" to="." method="_on_button_merge_pressed"]
[connection signal="mouse_entered" from="HBoxContainer/ButtonDestroy" to="." method="_on_button_destroy_mouse_entered"]
[connection signal="mouse_exited" from="HBoxContainer/ButtonDestroy" to="." method="_on_button_common_mouse_exited"]
[connection signal="pressed" from="HBoxContainer/ButtonDestroy" to="." method="_on_button_destroy_pressed"]
